--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.la
 *.lo
 *.o
+*.obj*
+*.exe
 *~
 
 .deps/
@@ -70,3 +72,6 @@ zbarimg/zbarimg
 zbar*.pc
 zbar-*.tar.bz2
 zbar-*.tar.gz
+
+.vscode/*
+build/
