--- a/zbar/CMakeLists.txt
+++ b/zbar/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.23)
 
 project(zbar C CXX ASM)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 11)
+# set(CMAKE_C_STANDARD 11)
+# set(CMAKE_CXX_STANDARD 11)
 
 add_definitions(
     -DHAVE_LIBJPEG
